# visual-multi-crop-row-navigation

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.cfg  setup.py
configs/: params.yaml
launch/: vs_navigation.launch  vs_navigation.launch.xml
scripts/: Camera.py  Controller.py  camera.py  contours.py  controller.py  featureExtractor.py  featureMatching.py  geometric.py  imageProc.py  movingVariance.py  vs_navigationNode.py  vs_navigator.py  vs_nodeHandler.py
visual_multi_crop_row_navigation/: contours.py  featureMatching.py  geometric.py  imageProc.py  main.py  visual_servoing_node.py  vs_nodeHandler.py
